5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1723_2508.log
== TEST (2019-05-09 13:24:44) 
-- CODE:
n= int(input("insira o numero de series: ")
s=0
c=0
i=2
i1=3
i2=4
snl=+1
while c<n:
	p1=3+snl*(4/(i*i1*i2))
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
	c=c+1
print(round(pl,8))















-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:25:12) 
-- CODE:
n= int(input("insira o numero de series: ")
s=0
c=0
i=2
i1=3
i2=4
snl=+1
while c<n:
	p1=3+snl*(4/(i*i1*i2))
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
	c=c+1
print(round(pl,8))















-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:25:35) 
-- CODE:
n= int(input("insira o numero de series: ")
c=0
i=2
i1=3
i2=4
snl=+1
while c<n:
	p1=3+snl*(4/(i*i1*i2))
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
	c=c+1
print(round(pl,8))















-- ERROR:
File "XXXX", line 2
    c=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:29:44) 
-- CODE:
n= int(input("insira o numero de series: ")
c=0
i=2
i1=3
i2=4
snl=+1
while c<n:
	p1=3+snl*(4/(i*i1*i2))
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
	c=c+1
print(round(pl,8))















-- ERROR:
File "XXXX", line 2
    c=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:30:10) 
-- CODE:
n= int(input("insira o numero de series: ")
i=2
i1=3
i2=4
snl=+1
while 0<n:
	p1=3+snl*(4/(i*i1*i2))
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
print(round(pl,8))















-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:36:03) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(p,8))
	












-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:36:28) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(p,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:36:41) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(p,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:36:44) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(p,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:36:58) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:37:09) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:37:33) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<=n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:37:36) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<=n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- ERROR:
File "XXXX", line 2
    i=2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:38:12) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
	c=c+1
f=s+p
print(round(f,8))









-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:38:34) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:38:44) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<=n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.14088134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:38:50) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<=n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.14088134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:39:38) 
-- CODE:
n=int(input("insira o numero de series: "))
c=0
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:40:57) 
-- CODE:
n=int(input("insira o numero de series: "))
c=1
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:41:10) 
-- CODE:
n=int(input("insira o numero de series: "))
c=1
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 13:41:18) 
-- CODE:
n=int(input("insira o numero de series: "))
c=1
i=2
i1=3
i2=4
snl=+1
s=3
p=0
while c<n:
	p=snl*(4/(i*i1*i2))+p
	c=c+1
	i=i+2
	i1=i1+2
	i2=i2+2
	snl=snl*-1
f=s+p
print(round(f,8))









-- EXECUTION TIME:
0.142399
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
